# IP-API

./: .gitignore  README.md  pyproject.toml  server.py
src/ip_api_mcp/: __init__.py  client.py  rate_limit.py  server.py
tests/: test_client.py  test_server.py
