[project]
name = "ip-api-mcp"
version = "0.1.0"
description = "MCP server for looking up approximate location details from ip-api.com."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "mcp[cli]>=1.27,<2",
]

[project.scripts]
ip-api-mcp = "ip_api_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"
